[package]
name = "neon-miniaudio"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_miniaudio"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
miniaudio = "0.10.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-runtime"]

[profile.release]
lto = true
